# Tesis

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Planilla de inscripción de Tesis.docx  README.md  cache_models.sh  command_train_jdv.md  docker-compose.gpu.yml  docker-compose.yml  download_models.sh  main.py  pyproject.toml  run_web.sh  start_services.sh
State_of_art/: Thesis_SOTA.csv  Thesis_SOTA_Features.md  bibliografies.bib  link.txt  state_of_art.csv
State_of_art/challenges/: Retos_y_Desafíos_Final.md
State_of_art/proposal/: Analisys_layer.md
experiments/cao/: batch_cao.py  cao_3b.py  cao_llm.py  jdv_colab.ipynb  jdv_eval_v2.py  jdv_runner.py  llm.py  llm_shared.py  select_evaluation_sample.py
experiments/cao/data/: evaluation_sample_v1.json  evaluation_sample_v1_summary.json  evaluation_sample_v2.json
experiments/midlm/: eval_midlm.py  eval_midlm_bidirectional.py  eval_qwen3b_best.py
experiments/queries_creation/: boost_k4.py  fix_cross_dupes.py  fix_nesting_graph.py  fix_reversal_metadata.py  regenerate_variants.py  validate_dataset.py
experiments/queries_creation/data/: domain_intent_map.json
experiments/textoir/results/: benchmark_results.csv
experiments/vagueness_judge/: compare.py  compare_best_vs_paper.py  compare_vs_paper.py  evaluate.py
experiments/vagueness_judge/outputs/: Mistral-7B-Baseline_interactions.jsonl  Mistral-7B-Instruct-v0.3_interactions.jsonl  Mistral-7B-Instruct-v0.3_metrics.json  Phi-3-mini-4k-instruct_interactions.jsonl  Phi-3-mini-Baseline_interactions.jsonl  Qwen2.5-3B-Baseline_interactions.jsonl  Qwen2.5-3B-Baseline_metrics.json  Qwen2.5-3B-Instruct_metrics.json  Qwen2.5-7B-Baseline_metrics.json  (+3 more)
scripts/: download_hf_model.py
src/AMR/: amr_api.py  amr_enviroment_instalation.txt  amr_processor.py
src/AMR/transition-amr-parser/: pyproject.toml
src/AMR/transition-amr-parser/transition_amr_parser/: __init__.py  amr.py  amr_machine.py  compat.py
src/Logic_Transformer/: transformer.py
src/MIDLM/: README_TRAINING.md  __init__.py  eval_midlm.py  export_textoir_tsv_from_weave_json.py  train_midlm_unsloth.py
src/Semantic_Grounding/: KeyBERT_processor.py
src/Vagueness_Judge/: __init__.py
src/base_models/: douwnload_models.py
src/buffer_structure/: __init__.py  cao_formatters.py  cao_types.py
src/lingo/: engine.py  pipeline.py
src/midlm_textoir_module/: __init__.py  analyze.py  midlm_http_predictor.py  midlm_inference_server.py  midlm_predictor.py  run_midlm_server.sh  textoir_http_predictor.py  textoir_msp_predictor.py
tests/: test_augment_data.py
tests/analysis_phase/: boost_k4.py  dedup_expanded.py  expand_queries.py  fix_reversal_metadata.py  generate_seeds.py
tests/comparissons/: batch_cao.py  select_evaluation_sample.py
training/: README.md  requirements-training.txt
training/augment/: __init__.py  annotate.py  cli.py  dialogue.py  merge.py
training/base_models/: download_models.py
training/midlm/: README.md  README_TRAINING.md  build_mixed_dataset.py  build_noise_pool.py  build_noisy_dataset.py  export_textoir_tsv_from_weave_json.py  extract_single_intent.py  merge_midiLM_qwen3b.py  requirements_toothless.txt  train_midlm_bidirectional.py  train_midlm_unsloth.py  train_qwen3b_best.py
training/textoir/: requirements.txt  train_benchmark.py
training/vagueness_judge/: dataset_wrapper.py  merge_commands.md  merge_lora.py  sft.py  sft_3b.py  sft_7b.py
(+116 files in other folders)
