[project]
name = "tesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.23",
    "ipykernel>=7.2.0",
    "keybert>=0.9.0",
    "lingo-ai>=1.4.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "peft>=0.10",
    "penman>=1.3.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "setuptools>=82.0.1",
    "spacy>=3.8.11",
    "streamlit>=1.55.0",
    "torch>=2.1",
    "transformers>=4.40",
    "trl>=0.9",
    "unsloth>=2024.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
