[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transition-amr-parser"
version = "0.5.4"
description = "IBM transition-based neural AMR parser (this repo’s pyproject only; no legacy setup.py pins)."
readme = "README.md"
# fairseq 0.10.2 does not run on Python 3.12; use 3.10 or 3.11 for this subproject.
requires-python = ">=3.10,<3.12"
dependencies = [
    "fairseq @ git+https://github.com/pytorch/fairseq.git@v0.10.2",
    # fairseq 0.10.2 uses np.float and similar aliases removed in NumPy 1.24+.
    "numpy>=1.21.6,<1.24",
    "torch>=2.1",
    "torch-scatter==2.1.2+pt25cu121",
    "tqdm>=4.55.0",
    "packaging>=20.8",
    "requests>=2.25.1",
    "python-dateutil>=2.8.1",
    "penman>=1.1.0",
    "progressbar",
]

[project.optional-dependencies]
# Optional tooling (not needed for parsing).
dev = ["ipdb"]
# Aligner / ELMO paths only.
ibm-aligner = ["h5py>=3.0.0"]
# `scripts/` and `tests/` that call the official smatch scorer.
scripts = ["smatch"]

[project.urls]
homepage = "https://github.com/IBM/transition-amr-parser"
tracker = "https://github.com/IBM/transition-amr-parser"

[project.scripts]
amr-parse = "transition_amr_parser.parse:main"
amr-machine = "transition_amr_parser.amr_machine:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.opt", "*.cu", "*.cpp"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.5.0+cu121.html"]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
